[package]
name = "gba-hex-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25"
eframe = { version = "0.25", default-features = false, features = ["default_fonts", "glow"] }
emath = "0.25"